# imgui-node-editor

./: CMakeLists.txt  crude_json.cpp  imgui_canvas.cpp  imgui_canvas.h  imgui_node_editor.cpp  imgui_node_editor.h  imgui_node_editor_api.cpp
utilities/: builders.cpp  drawing.cpp  widgets.cpp
